tests/compile_fail/borrow/forward_box_generic.rs
#[derive(derive_more::Borrow)]
#[borrow(forward)]
struct Foo<T>(Box<T>);

fn main() {}
